chore(base images): add script to check base image digests
Signed-off-by: Vitaliy Gulyy <vgulyy@redhat.com>

--- a/dockerfiles/cpp-rhel7/Dockerfile
+++ b/dockerfiles/cpp-rhel7/Dockerfile
@@ -13,6 +13,6 @@
 
 ARG BASE_IMAGE="registry.access.redhat.com/devtools/llvm-toolset-rhel7"
 
-FROM registry.access.redhat.com/devtools/llvm-toolset-rhel7@sha256:2c65fdfb180eefadb615a6a858ff06ce8541860be2b570716e854510a04cd329
+FROM registry.access.redhat.com/devtools/llvm-toolset-rhel7@sha256:2c65fdfb180eefadb615a6a858ff06ce8541860be2b570716e854510a04cd329-xa-xa
 
 #{INCLUDE:../base.dockerfile}
