--- a/dockerfiles/java8-maven/Dockerfile
+++ b/dockerfiles/java8-maven/Dockerfile
@@ -13,7 +13,7 @@
 
 ARG BASE_IMAGE="docker.io/maven:3.6.1-jdk-8"
 
-FROM docker.io/maven@sha256:69b40237b342fee9bf996b81110f4dab250a4bc6a2ee52866965101eda066324
+FROM docker.io/maven@sha256:69b40237b342fee9bf996b81110f4dab250a4bc6a2ee52866965101eda066324-new-test
 
 #{INCLUDE:../base.dockerfile}
 
