--- a/.github/workflows/check-sidecar-image-digests.yml
+++ b/.github/workflows/check-sidecar-image-digests.yml
@@ -72,4 +72,4 @@ jobs:
           git config --global user.name "Mykhailo Kuznietsov"
           git config --global user.email "mkuznets@redhat.com"
           export GITHUB_TOKEN=${{ secrets.CHE_BOT_GITHUB_TOKEN }}
-          ./arbitrary-users-patch/workflow/check-base-image-digests.sh
+          ./build/workflows/check-sidecar-image-digests.sh --pr
