--- a/devfiles/php-laravel/devfile.yaml
+++ b/devfiles/php-laravel/devfile.yaml
@@ -18,7 +18,7 @@ components:
 -
   type: dockerimage
   alias: php
-  image: quay.io/eclipse/che-php-7:next
+  image: quay.io/eclipse/che-php-7:e898e48
   memoryLimit: 512Mi
   endpoints:
   - name: '8000-tcp'
