--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -19,7 +19,6 @@ jobs:
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v1
-
       - name: Shellcheck
         run: |
           find . -type f -name '*.sh' | wc -l
@@ -29,52 +28,54 @@ jobs:
     runs-on: ubuntu-20.04
     steps:
     - uses: actions/checkout@v1
+
     - name: Run script which checks container image digest
       run: |
         sudo pip install yq
         /bin/bash .ci/devfile-images-check.sh
 
-  build-dev-containers:
+  build-sidecar-images:
     runs-on: ubuntu-20.04
     steps:
-      - name: Checkout source code
+      - name: Clone source code
         uses: actions/checkout@v1
+        with:
+          fetch-depth: 0
 
-      - name: Build dev container images
-        run: ./arbitrary-users-patch/build_images.sh --rm
+      - name: Rebuild sidecar images
+        run: ./build/workflows/build-sidecar-images-on-push.sh --rm
+        env:
+          COMMIT_SHA: ${{ github.event.pull_request.head.sha }}
 
   build-main-image:
-
     runs-on: ubuntu-20.04
-
     steps:
     - uses: actions/checkout@v1
 
-    - 
-      name: Prepare
+    - name: Prepare
       id: prep
       run: |
         PLATFORMS=$(cat PLATFORMS)
         echo ::set-output name=platforms::${PLATFORMS}
-        
+
     - name: Set up Docker Buildx
       id: buildx
       uses: docker/setup-buildx-action@v1
 
     - name: Set up QEMU
       uses: docker/setup-qemu-action@v1
-      
+
     - name: Cache docker layers
       uses: actions/cache@v1
       with:
         path: ./caches
         key: v1-${{ github.head_ref }}
-        
+
     - name: Load docker layer cache
       run: |
         set +o pipefail
         docker load -i ./caches/app.tar | true
-    
+
     - name: Build devfile registry
       uses: docker/build-push-action@v2
       with:
@@ -86,7 +87,7 @@ jobs:
         cache-from: "type=local,src=/tmp/.buildx-cache"
         cache-to: "type=local,dest=/tmp/.buildx-cache"
         push: false
-    
+
     - name: Build offline devfile registry
       uses: docker/build-push-action@v2
       with:
