--- a/.github/workflows/next-build.yml
+++ b/.github/workflows/next-build.yml
@@ -18,13 +18,12 @@ jobs:
   next-build-publish:
     runs-on: ubuntu-20.04
     steps:
-      - 
-        name: Clone source code
+      - name: Clone source code
         uses: actions/checkout@v1
         with:
           fetch-depth: 0
-      - 
-        name: Prepare
+
+      - name: Prepare
         id: prep
         run: |
           set -e
@@ -36,38 +35,33 @@ jobs:
           echo ::set-output name=image::${IMAGE}
           PLATFORMS=$(cat PLATFORMS)
           echo ::set-output name=platforms::${PLATFORMS}
-      -
-        name: "Set up QEMU"
+
+      - name: "Set up QEMU"
         uses: docker/setup-qemu-action@v1
-      -
-        name: "Set up Docker Buildx"
+
+      - name: "Set up Docker Buildx"
         uses: docker/setup-buildx-action@v1
-      -
-        name: "Docker quay.io Login"
+
+      - name: "Login to quay.io"
         uses: docker/login-action@v1
         with:
           registry: quay.io
           username: ${{ secrets.QUAY_USERNAME }}
           password: ${{ secrets.QUAY_PASSWORD }}
-      - 
-        name: Login to docker.io
+
+      - name: Login to docker.io
         uses: docker/login-action@v1
         with:
           registry: docker.io
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
 
-      - name: Build and push base images
-        run: ./arbitrary-users-patch/build_images.sh --push --rm
+      - name: Build and push happy path image
+        run: ./happy-path/build_happy_path_image.sh --push --rm
         env: 
           TAG: next
 
-      - name: Build and push happy path image
-        run: ./arbitrary-users-patch/happy-path/build_happy_path_image.sh --push --rm
-        env: 
-          TAG: next
-      -
-        name: "Build and push"
+      - name: "Build and push"
         uses: docker/build-push-action@v2
         with:
           context: .
@@ -75,9 +69,8 @@ jobs:
           platforms: ${{ steps.package.outputs.content }}
           tags:  quay.io/eclipse/${{ steps.prep.outputs.image }}:${{ steps.prep.outputs.version }},quay.io/eclipse/${{ steps.prep.outputs.image }}:${{ steps.prep.outputs.short_sha1 }}
           push: true
-          
-      -
-        name: Set up yq
+
+      - name: Set up yq
         run: |
           sudo wget https://github.com/mikefarah/yq/releases/download/v4.7.0/yq_linux_amd64 -O /usr/bin/yq
           sudo chmod +x /usr/bin/yq
