--- a/devfiles/apache-camel-springboot/devfile.yaml
+++ b/devfiles/apache-camel-springboot/devfile.yaml
@@ -21,7 +21,7 @@ components:
   -
     type: dockerimage
     alias: maven
-    image: quay.io/eclipse/che-java8-maven:next
+    image: quay.io/eclipse/che-java8-maven:afaeb0c
     env:
       - name: MAVEN_CONFIG
         value: ""
