--- a/.github/workflows/build-sidecar-images-on-push.yml
+++ b/.github/workflows/build-sidecar-images-on-push.yml
@@ -21,7 +21,7 @@ on:
       rebuild_all:
         description: 'Rebuild all sidecar images:'
         required: true
-        default: "false"
+        default: "true"
 
 jobs:
   rebuild-images-on-push:
