chore(digests): bump devfiles to new sidecar tags
Signed-off-by: Mykhailo Kuznietsov <mkuznets@redhat.com>

--- a/devfiles/cpp/devfile.yaml
+++ b/devfiles/cpp/devfile.yaml
@@ -14,7 +14,7 @@ components:
     alias: cpp-plugin
   - type: dockerimage
     alias: cpp-dev
-    image: quay.io/eclipse/che-cpp-rhel7:next
+    image: quay.io/eclipse/che-cpp-rhel7:ce0526f
     memoryLimit: 512Mi
     mountSources: true
 commands:
