--- a/devfiles/nodejs-angular/devfile.yaml
+++ b/devfiles/nodejs-angular/devfile.yaml
@@ -15,7 +15,7 @@ components:
   -
     type: dockerimage
     alias: nodejs
-    image: quay.io/eclipse/che-nodejs10-community:next
+    image: quay.io/eclipse/che-nodejs10-community:ce0526f
     memoryLimit: 2Gi
     endpoints:
       - name: 'angular'
