--- a/devfiles/nodejs-yarn/devfile.yaml
+++ b/devfiles/nodejs-yarn/devfile.yaml
@@ -15,7 +15,7 @@ components:
   -
     type: dockerimage
     alias: nodejs
-    image: quay.io/eclipse/che-nodejs12-community:next
+    image: quay.io/eclipse/che-nodejs12-community:ce0526f
     memoryLimit: 1500Mi
     endpoints:
       - name: 'nodejs'
