--- a/devfiles/go/devfile.yaml
+++ b/devfiles/go/devfile.yaml
@@ -28,7 +28,7 @@ components:
 -
   type: dockerimage
   # this version is used in the plugin
-  image: quay.io/eclipse/che-golang-1.14:next
+  image: quay.io/eclipse/che-golang-1.14:ce0526f
   alias: go-cli
   env:
     - name: GOPATH
