--- a/devfiles/java-gradle/devfile.yaml
+++ b/devfiles/java-gradle/devfile.yaml
@@ -18,7 +18,7 @@ components:
   -
     type: dockerimage
     alias: gradle
-    image: quay.io/eclipse/che-java11-gradle:next
+    image: quay.io/eclipse/che-java11-gradle:ce0526f
     env:
       - name: GRADLE_USER_HOME
         value: /home/gradle/.gradle
