--- a/devfiles/java-maven/devfile.yaml
+++ b/devfiles/java-maven/devfile.yaml
@@ -18,7 +18,7 @@ components:
   -
     type: dockerimage
     alias: maven
-    image: quay.io/eclipse/che-java11-maven:next
+    image: quay.io/eclipse/che-java11-maven:ce0526f
     env:
       - name: MAVEN_CONFIG
         value: ""
