--- a/devfiles/nodejs-mongo/devfile.yaml
+++ b/devfiles/nodejs-mongo/devfile.yaml
@@ -20,7 +20,7 @@ components:
   -
     type: dockerimage
     alias: nodejs
-    image: quay.io/eclipse/che-nodejs10-ubi:next
+    image: quay.io/eclipse/che-nodejs10-ubi:ce0526f
     env:
       # The values below are used to set up the environment for running the application
       - name: SECRET
