--- a/devfiles/quarkus/devfile.yaml
+++ b/devfiles/quarkus/devfile.yaml
@@ -17,7 +17,7 @@ components:
   -
     type: dockerimage
     alias: centos-quarkus-maven
-    image: quay.io/eclipse/che-quarkus:next
+    image: quay.io/eclipse/che-quarkus:ce0526f
     env:
       - name: JAVA_OPTS
         value: "-XX:MaxRAMPercentage=50.0 -XX:+UseParallelGC -XX:MinHeapFreeRatio=10
