--- a/devfiles/rust/devfile.yaml
+++ b/devfiles/rust/devfile.yaml
@@ -12,7 +12,7 @@ components:
     memoryLimit: 512Mi
     type: dockerimage
     alias: rust
-    image: quay.io/eclipse/che-rust-1.39:next
+    image: quay.io/eclipse/che-rust-1.39:ce0526f
   - type: chePlugin
     id: rust-lang/rust/latest
 commands:
