--- a/devfiles/scala-sbt/devfile.yaml
+++ b/devfiles/scala-sbt/devfile.yaml
@@ -16,7 +16,7 @@ components:
   -
     type: dockerimage
     alias: sbt
-    image: quay.io/eclipse/che-java11-maven:next
+    image: quay.io/eclipse/che-java11-maven:ce0526f
     env:
       - name: SBT_OPTS
         value: "-J-XX:MaxRAMPercentage=80 -J-XX:+UseParallelGC -J-XX:MinHeapFreeRatio=10
