--- a/devfiles/go/devfile.yaml
+++ b/devfiles/go/devfile.yaml
@@ -28,7 +28,8 @@ components:
 -
   type: dockerimage
   # this version is used in the plugin
-  image: quay.io/eclipse/che-golang-1.14:ce0526f
+  # Built from https://github.com/eclipse-che/che-devfile-registry/tree/main/arbitrary-users-patch/base_images
+  image: quay.io/eclipse/che-golang-1.17:TODO-SET-TAG-HERE
   alias: go-cli
   env:
     - name: GOPATH
