add builder for golang-1.17; add TODO to update go/devfile.yaml once 1.17 exists
Change-Id: Ia43a2b05c9e50ba5b8450707032691616aac5fdf
Signed-off-by: nickboldt <nboldt@redhat.com>

--- a/devfiles/go/devfile.yaml
+++ b/devfiles/go/devfile.yaml
@@ -28,8 +28,8 @@ components:
 -
   type: dockerimage
   # this version is used in the plugin
-  # Built from https://github.com/eclipse-che/che-devfile-registry/tree/main/arbitrary-users-patch/base_images
-  image: quay.io/eclipse/che-golang-1.17:TODO-SET-TAG-HERE
+  # TODO 20610 - move to golang-1.17 once it exists
+  image: quay.io/eclipse/che-golang-1.14:ce0526f
   alias: go-cli
   env:
     - name: GOPATH
