--- a/devfiles/go/devfile.yaml
+++ b/devfiles/go/devfile.yaml
@@ -28,6 +28,7 @@ components:
 -
   type: dockerimage
   # this version is used in the plugin
+  # TODO 20610 - move to golang-1.17 once it exists
   image: quay.io/eclipse/che-golang-1.14:ce0526f
   alias: go-cli
   env:
