--- a/devfiles/go/meta.yaml
+++ b/devfiles/go/meta.yaml
@@ -3,3 +3,5 @@ displayName: Go
 description: Stack with Go 1.14
 tags: ["Debian", "Go"]
 icon: /images/go.svg
+links:
+  v2: https://github.com/che-samples/golang-echo-example/tree/devfile2
