--- a/devfiles/java-mongo/meta.yaml
+++ b/devfiles/java-mongo/meta.yaml
@@ -3,3 +3,5 @@ displayName: Java with Spring Boot and MongoDB
 description: Java stack with OpenJDK 8, MongoDB and Spring Boot Guestbook demo application
 tags: ["Java", "OpenJDK", "Maven", "Spring Boot", "MongoDB"]
 icon: /images/java.svg
+links:
+  v2: https://github.com/che-samples/java-guestbook/tree/devfilev2
