--- a/devfiles/cpp/meta.yaml
+++ b/devfiles/cpp/meta.yaml
@@ -3,3 +3,5 @@ displayName: C/C++
 description: Stack with C/C++ and Clang 8
 tags: ["C/C++", "clang", "g++", "gdb"]
 icon: /images/cpp.svg
+links:
+  v2: https://github.com/che-samples/cpp-hello-world/tree/devfilev2
