--- a/devfiles/nodejs-angular/meta.yaml
+++ b/devfiles/nodejs-angular/meta.yaml
@@ -3,3 +3,5 @@ displayName: NodeJS Angular Web Application
 description: Stack for developing NodeJS Angular Web Application
 tags: ["NodeJS", "Angular", "Alpine"]
 icon: /images/angular.svg
+links:
+  v2: https://github.com/che-samples/nodejs-angular/tree/devfilev2
