Add bash devfile v2 link.
Signed-off-by: Oleksandr Andriienko <oandriie@redhat.com>

--- a/devfiles/bash/meta.yaml
+++ b/devfiles/bash/meta.yaml
@@ -3,3 +3,5 @@ displayName: Bash
 description: Stack with environment ready to develop bash scripts.
 tags: ["Bash", "Shell"]
 icon: /images/che.svg
+links:
+  v2: https://github.com/che-samples/bash/tree/devfilev2
