chore: #19953 add community tag to meta.yaml files, so we can use it to label devfile tiles in the dashboard
Change-Id: If07299dd452819cbd3efc0d7364d08d285e04754
Signed-off-by: nickboldt <nboldt@redhat.com>

--- a/devfiles/bash/meta.yaml
+++ b/devfiles/bash/meta.yaml
@@ -1,7 +1,7 @@
 ---
 displayName: Bash
 description: Stack with environment ready to develop bash scripts.
-tags: ["Bash", "Shell"]
+tags: ["community", "Bash", "Shell"]
 icon: /images/che.svg
 links:
   v2: https://github.com/che-samples/bash/tree/devfilev2
