--- a/devfiles/java-web-vertx/meta.yaml
+++ b/devfiles/java-web-vertx/meta.yaml
@@ -1,5 +1,5 @@
 ---
 displayName: Java Vert.x
 description: Java stack with OpenJDK 8 and Vert.x demo application
-tags: ["Java", "OpenJDK", "Maven", "Vertx"]
+tags: ["community", "Java", "OpenJDK", "Maven", "Vertx"]
 icon: /images/vertx.svg
