--- a/devfiles/php-mysql/meta.yaml
+++ b/devfiles/php-mysql/meta.yaml
@@ -1,5 +1,5 @@
 ---
 displayName: "PHP with MySQL"
 description: PHP Stack with MySQL and simple database application
-tags: ["PHP", "Apache", "MySQL", "Debian", "Centos"]
+tags: ["community", "PHP", "Apache", "MySQL", "Debian", "Centos"]
 icon: /images/php.svg
