--- a/devfiles/scala-sbt/meta.yaml
+++ b/devfiles/scala-sbt/meta.yaml
@@ -1,7 +1,7 @@
 ---
 displayName: Scala
 description: Scala Stack with OpenJDK 11 and sbt 1.x
-tags: ["Scala", "OpenJDK", "sbt", "Debian"]
+tags: ["community", "Scala", "OpenJDK", "sbt", "Debian"]
 icon: /images/scala.svg
 links:
   v2: https://github.com/che-samples/scala-sbt/tree/devfilev2
