--- a/devfiles/apache-camel-k/meta.yaml
+++ b/devfiles/apache-camel-k/meta.yaml
@@ -1,5 +1,5 @@
 ---
 displayName: Apache Camel K
 description: Stack with tooling ready to develop Integration projects with Apache Camel K
-tags: ["Apache Camel K", "Red Hat Fuse", "Integration"]
+tags: ["community", "Apache Camel K", "Red Hat Fuse", "Integration"]
 icon: /images/camelk.svg
