--- a/devfiles/apache-camel-springboot/meta.yaml
+++ b/devfiles/apache-camel-springboot/meta.yaml
@@ -1,5 +1,5 @@
 ---
 displayName: Apache Camel based on Spring Boot
 description: Stack with environment ready to develop Integration projects with Apache Camel based on Spring Boot.
-tags: ["Java", "OpenJDK", "Maven", "Debian", "Apache Camel", "Red Hat Fuse", "Spring Boot"]
+tags: ["community", "Java", "OpenJDK", "Maven", "Debian", "Apache Camel", "Red Hat Fuse", "Spring Boot"]
 icon: /images/camelk.svg
