--- a/devfiles/dotnet/meta.yaml
+++ b/devfiles/dotnet/meta.yaml
@@ -1,5 +1,5 @@
 ---
 displayName: ".NET Core"
 description: Stack with .Net 3.1
-tags: ["Debian", "Dotnet", "C#"]
+tags: ["community", "Debian", "Dotnet", "C#"]
 icon: /images/dotnetcore.svg
