--- a/devfiles/java-web-spring/meta.yaml
+++ b/devfiles/java-web-spring/meta.yaml
@@ -1,7 +1,7 @@
 ---
 displayName: Java Spring Boot
 description: Java stack with OpenJDK 11 and Spring Boot Petclinic demo application
-tags: ["Java", "OpenJDK", "Maven", "Spring Boot"]
+tags: ["community", "Java", "OpenJDK", "Maven", "Spring Boot"]
 icon: /images/springboot.svg
 links:
   v2: https://github.com/che-samples/java-spring-petclinic/tree/devfilev2
