--- a/devfiles/nodejs-angular/meta.yaml
+++ b/devfiles/nodejs-angular/meta.yaml
@@ -1,7 +1,7 @@
 ---
 displayName: NodeJS Angular Web Application
 description: Stack for developing NodeJS Angular Web Application
-tags: ["NodeJS", "Angular", "Alpine"]
+tags: ["community", "NodeJS", "Angular", "Alpine"]
 icon: /images/angular.svg
 links:
   v2: https://github.com/che-samples/nodejs-angular/tree/devfilev2
