--- a/devfiles/nodejs-react/meta.yaml
+++ b/devfiles/nodejs-react/meta.yaml
@@ -1,7 +1,7 @@
 ---
 displayName: NodeJS React Web Application
 description: Stack for developing NodeJS React Web Application
-tags: ["NodeJS", "React", "Redux", "RealWorld"]
+tags: ["community", "NodeJS", "React", "Redux", "RealWorld"]
 icon: /images/nodejs.svg
 links:
   v2: https://github.com/che-samples/nodejs-react-redux/tree/devfilev2
