--- a/devfiles/php-laravel/meta.yaml
+++ b/devfiles/php-laravel/meta.yaml
@@ -1,5 +1,5 @@
 ---
 displayName: "PHP Laravel with MySQL"
 description: PHP Stack with Laravel and MySQL real world application
-tags: ["PHP", "Apache", "MySQL", "Centos", "Debian"]
+tags: ["community", "PHP", "Apache", "MySQL", "Centos", "Debian"]
 icon: /images/php.svg
