--- a/devfiles/dotnet-asp.net/meta.yaml
+++ b/devfiles/dotnet-asp.net/meta.yaml
@@ -3,3 +3,5 @@ displayName: "ASP.NET Core Web Application"
 description: Stack for developing ASP.NET Core Web Application
 tags: ["Debian", "Dotnet", "C#", "ASP.NET"]
 icon: /images/dotnetcore.svg
+links:
+  v2: https://github.com/che-samples/aspnetcore-realworld-example-app/tree/devfilev2
