--- a/devfiles/java-lombok/meta.yaml
+++ b/devfiles/java-lombok/meta.yaml
@@ -3,3 +3,5 @@ displayName: Java Lombok
 description: Java Stack with Lombok 1.18.18, OpenJDK 11 and Maven 3.6.0
 tags: ["community", "Java", "OpenJDK", "Maven", "Debian", "Lombok"]
 icon: /images/lombok.svg
+links:
+  v2: https://github.com/che-samples/lombok-project-sample/tree/devfilev2
