chore(digests): update dockerfile base images
Signed-off-by: Mykhailo Kuznietsov <mkuznets@redhat.com>

--- a/dockerfiles/nodejs10-ubi/Dockerfile
+++ b/dockerfiles/nodejs10-ubi/Dockerfile
@@ -9,6 +9,6 @@
 
 ARG BASE_IMAGE="registry.access.redhat.com/ubi8/nodejs-10"
 
-FROM registry.access.redhat.com/ubi8/nodejs-10@sha256:59610c6b73172e4c7d3b0a84efeeecba478180fdfd8523e85c9674f88cca4adf
+FROM registry.access.redhat.com/ubi8/nodejs-10@
 
 #{INCLUDE:../base.dockerfile}
