--- a/devfiles/rust/meta.yaml
+++ b/devfiles/rust/meta.yaml
@@ -3,3 +3,5 @@ displayName: Rust
 description: Rust Stack with Rust 1.39
 tags: ["community", "Rust"]
 icon: /images/rust.svg
+links:
+  v2: https://github.com/che-samples/helloworld-rust/tree/devfilev2
