--- a/devfiles/apache-camel-k/meta.yaml
+++ b/devfiles/apache-camel-k/meta.yaml
@@ -3,3 +3,5 @@ displayName: Apache Camel K
 description: Stack with tooling ready to develop Integration projects with Apache Camel K
 tags: ["community", "Apache Camel K", "Red Hat Fuse", "Integration"]
 icon: /images/camelk.svg
+links:
+  v2: https://github.com/che-samples/apache-camel-k/tree/devfilev2
