chore: gh20976 switch to uppercase Community instead of community, because six seasons and a refactoring
Change-Id: I406520621bf3ab6a775b8f94780e28a97ba041ff
Signed-off-by: nickboldt <nboldt@redhat.com>

--- a/devfiles/java-gradle/meta.yaml
+++ b/devfiles/java-gradle/meta.yaml
@@ -1,5 +1,5 @@
 ---
 displayName: Java Gradle
 description: Java Stack with OpenJDK 11 and Gradle 6.2.1
-tags: ["community", "Java", "OpenJDK", "Gradle", "Ubuntu"]
+tags: ["Community", "Java", "OpenJDK", "Gradle", "Ubuntu"]
 icon: /images/java.svg
