--- a/devfiles/java-mysql/meta.yaml
+++ b/devfiles/java-mysql/meta.yaml
@@ -1,5 +1,5 @@
 ---
 displayName: Java with Spring Boot and MySQL
 description: Java stack with OpenJDK 8, MySQL and Spring Boot Petclinic demo application
-tags: ["community", "Java", "OpenJDK", "Maven", "Spring Boot", "MySQL"]
+tags: ["Community", "Java", "OpenJDK", "Maven", "Spring Boot", "MySQL"]
 icon: /images/springboot.svg
