--- a/devfiles/quarkus-command-mode/meta.yaml
+++ b/devfiles/quarkus-command-mode/meta.yaml
@@ -1,5 +1,5 @@
 ---
 displayName: Quarkus CLI
 description: Quarkus stack with a command-mode sample
-tags: ["community", "Java", "Quarkus", "OpenJDK", "Maven", "Debian"]
+tags: ["Community", "Java", "Quarkus", "OpenJDK", "Maven", "Debian"]
 icon: /images/quarkus.svg
