--- a/devfiles/bash/meta.yaml
+++ b/devfiles/bash/meta.yaml
@@ -1,7 +1,7 @@
 ---
 displayName: Bash
 description: Stack with environment ready to develop bash scripts.
-tags: ["community", "Bash", "Shell"]
+tags: ["Community", "Bash", "Shell"]
 icon: /images/che.svg
 links:
   v2: https://github.com/che-samples/bash/tree/devfilev2
