--- a/devfiles/php-web-simple/meta.yaml
+++ b/devfiles/php-web-simple/meta.yaml
@@ -1,5 +1,5 @@
 ---
 displayName: "PHP Simple"
 description: PHP Stack with PHP 7.1 and simple web application
-tags: ["community", "PHP", "Apache", "Debian"]
+tags: ["Community", "PHP", "Apache", "Debian"]
 icon: /images/php.svg
