--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,2 +1,2 @@
 # Global Owners
-* @tsmaeder @JPinkney @svor @benoitf @vitaliy-guliy @vinokurig
+* @tsmaeder @svor @benoitf @vitaliy-guliy @vinokurig
