--- a/devfiles/rust/meta.yaml
+++ b/devfiles/rust/meta.yaml
@@ -1,7 +1,7 @@
 ---
 displayName: Rust
 description: Rust Stack with Rust 1.57
-tags: ["community", "Rust"]
+tags: ["Community", "Rust"]
 icon: /images/rust.svg
 links:
   v2: https://github.com/che-samples/helloworld-rust/tree/devfilev2
