Added all v1 devfile commands to v2 devfile
Signed-off-by: Mario Loriedo <mario.loriedo@gmail.com>

--- a/.devfile-v2.yaml
+++ b/.devfile-v2.yaml
@@ -21,6 +21,7 @@ components:
       endpoints:
         - name: devfile-registry
           targetPort: 8080
+          path: /devfiles
       volumeMounts:
         - name: images
           path: /usr/local/apache2/htdocs/images
@@ -29,7 +30,19 @@ components:
       ephemeral: true
 
 commands:
-  - id: 1-build-devfile-registry
+  - id: build
     exec:
       commandLine: './build/dev/build-devfile-registry.sh'
       component: devtools
+      label: 1. build devfile-registry
+  - id: start
+    exec:
+      commandLine: './build/dev/start-devfile-registry.sh'
+      component: che-devfile-registry-prod
+      label: 2. start devfile-registry  
+  - id: publish
+    exec:
+      commandLine: './build/dev/publish-devfile-registry-to-surge.sh'
+      component: che-devfile-registry-prod
+      label: 3. publish to surge.sh
+  
