--- a/.devfile-v2.yaml
+++ b/.devfile-v2.yaml
@@ -3,6 +3,7 @@ metadata:
   name: che-devfile-registry
 attributes:
   controller.devfile.io/storage-type: ephemeral
+  controller.devfile.io/scc: container-build
 components:
   - name: devtools
     container:
